--- a/html/index.html
+++ b/html/index.html
@@ -18,7 +18,7 @@
         <td>Andrej Plenković</td>
       </tr>
       <tr>
-        <td>Deputy Prime Minister<br />Finance Minister</td>
+        <td>Deputy Prime Minister<br />Minister of Finance</td>
         <td>Zdravko Marić</td>
       </tr>
       <tr>
@@ -32,10 +32,6 @@
       <tr>
         <td>Deputy Prime Minister</td>
         <td>Boris Milošević</td>
-      </tr>
-      <tr>
-        <td>Health Minister</td>
-        <td>Vili Beroš</td>
       </tr>
       <tr>
         <td>Minister of Agriculture</td>
@@ -60,6 +56,10 @@
       <tr>
         <td>Minister of Foreign and European Affairs</td>
         <td>Gordan Grlić-Radman</td>
+      </tr>
+      <tr>
+        <td>Minister of Health</td>
+        <td>Vili Beroš</td>
       </tr>
       <tr>
         <td>Minister of Justice</td>
@@ -98,7 +98,7 @@
         <td>Boris Vujčić</td>
       </tr>
       <tr>
-        <td>mayor of Zagreb</td>
+        <td>Mayor of Zagreb</td>
         <td>Tomislav Tomašević</td>
       </tr>
       <tr>
