--- a/html/index.html
+++ b/html/index.html
@@ -38,6 +38,10 @@
         <td>Marija Vučković</td>
       </tr>
       <tr>
+        <td>Minister of Construction, Physical Planning and State Property</td>
+        <td>Ivan Paladina</td>
+      </tr>
+      <tr>
         <td>Minister of Culture</td>
         <td>Nina Obuljen Koržinek</td>
       </tr>
