--- a/html/index.html
+++ b/html/index.html
@@ -31,7 +31,7 @@
       </tr>
       <tr>
         <td>Deputy Prime Minister</td>
-        <td>Boris Milošević</td>
+        <td>Anja Šimpraga</td>
       </tr>
       <tr>
         <td>Minister of Agriculture</td>
@@ -51,7 +51,7 @@
       </tr>
       <tr>
         <td>Minister of Economy and Sustainable Development</td>
-        <td>Tomislav Ćorić</td>
+        <td>Davor Filipović</td>
       </tr>
       <tr>
         <td>Minister of Foreign and European Affairs</td>
@@ -67,7 +67,7 @@
       </tr>
       <tr>
         <td>Minister of Labour and Pension System</td>
-        <td>Josip Aladrović</td>
+        <td>Marin Piletić</td>
       </tr>
       <tr>
         <td>Minister of Maritime Affairs, Transport and Infrastructure</td>
