--- a/html/index.html
+++ b/html/index.html
@@ -30,6 +30,10 @@
         <td>Anja Šimpraga</td>
       </tr>
       <tr>
+        <td>Deputy Prime Minister<br />Minister of Maritime Affairs, Transport and Infrastructure</td>
+        <td>Oleg Butković</td>
+      </tr>
+      <tr>
         <td>Minister of Agriculture</td>
         <td>Marija Vučković</td>
       </tr>
@@ -50,6 +54,10 @@
         <td>Davor Filipović</td>
       </tr>
       <tr>
+        <td>Minister of Finance</td>
+        <td>Marko Primorac</td>
+      </tr>
+      <tr>
         <td>Minister of Foreign and European Affairs</td>
         <td>Gordan Grlić-Radman</td>
       </tr>
@@ -64,10 +72,6 @@
       <tr>
         <td>Minister of Labour and Pension System</td>
         <td>Marin Piletić</td>
-      </tr>
-      <tr>
-        <td>Minister of Maritime Affairs, Transport and Infrastructure</td>
-        <td>Oleg Butković</td>
       </tr>
       <tr>
         <td>Minister of Regional Development and EU Funds</td>
